# polytech_bot

./: .gitignore  README.md  buttons.py  config.py  db.db  main.py  pyproject.toml  test.py  text.py
polytech_bot/: config.py.example  main.py  schedule.py
src/: amain.py  buttons.py  config.py  config.py.example  main.py  places.py  schedule.py  text.py
tests/: test.py
