[tool.poetry]
name = "polytech_bot"
version = "0.1.0"
description = "политех бот"
authors = ["Kirill Tarasov <tarasov.ks@edu.spbstu.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.28.1"
pyTelegramBotAPI = "^4.7.0"
pytz = "^2022.5"
docxcompose = "^1.3.6"
docxtpl = "^0.16.4"
random-cat = "^1.0.1"
random-dog = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
