[tool.poetry]
name = "polytech-bot"
version = "0.2.0"
description = "Polytech telegram bot"
authors = ["Kirill Tarasov <tarasov.ks@edu.spbstu.ru>"]
readme = "README.md"
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.22.2"
ujson = "^5.5.0"
uvloop = "^0.17.0"
aiodns = "^3.0.0"
brotlipy = "^0.7.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
